# DuckBot-For-ark

./: AGENTS.md  MOD_BUILD_GUIDE.md  README.md
mcp-bridge/: config.json.example  pyproject.toml
mcp-bridge/data/vanilla/: aliases_common.json  dinos_sample.json  engrams.json  items.json
mcp-bridge/sheldon_bridge/: admin_api.py  agent.py  agent_guardrail.py  cache.py  cli.py  config.py  duckbot_config.py  duckbot_handler.py  duckbot_session.py  fuzzy.py  hooks.py  intent.py  knowledge.py  metrics.py  rest_admin.py  server.py  session.py  session_persistence.py  world_context.py
mcp-bridge/sheldon_bridge/providers/: llm.py
mcp-bridge/sheldon_bridge/skills/: __init__.py  bundles.py  improver.py  registry.py  tools.py
mcp-bridge/sheldon_bridge/skills/auto_feed/: SKILL.md  handler.py
mcp-bridge/sheldon_bridge/skills/bundles/: admin-commands.yaml  tribe-management.yaml
mcp-bridge/sheldon_bridge/skills/graceful_shutdown/: SKILL.md  handler.py
mcp-bridge/sheldon_bridge/skills/wild_dino_alert/: SKILL.md  handler.py
mcp-bridge/sheldon_bridge/tools/: actions.py  knowledge.py  memory.py  registry.py
mcp-bridge/tests/: test_permissions.py  test_protocol_compat.py  test_spatial_tools.py
mod/: README.md
plugin/: DuckBot.sln  DuckBot.vcxproj  DuckBot.vcxproj.filters  README.md
plugin/Configs/: PluginInfo.json
plugin/Includes/: json.hpp
plugin/src/: MCPBridge.cpp  MCPBridge.h  Plugin.cpp  Plugin.h
scripts/: build_sheldon_mod.py
