[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckbot-bridge"
version = "0.1.0"
description = "LLM-powered AI assistant bridge for ARK: Survival Ascended — DuckBot C++ plugin companion"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Franzferdinan51"},
]

dependencies = [
    "litellm>=1.80",
    "websockets>=14.0",
    "rapidfuzz>=3.0",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout",
    "ruff",
    "mypy",
]

[project.scripts]
duckbot-bridge = "sheldon_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/ArkAscendedAI/sheldon-ai-for-ark"
Repository = "https://github.com/ArkAscendedAI/sheldon-ai-for-ark"
Issues = "https://github.com/ArkAscendedAI/sheldon-ai-for-ark/issues"

[tool.hatch.build.targets.wheel]
packages = ["sheldon_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py311"
line-length = 100
